2003-05-06  Chris Toshok  <toshok@ximian.com>

	[ really commit this, fixes bug #41910 ] 
	* gui/contact-list-editor/e-contact-list-model.c
	(e_contact_list_model_remove_row): change from model_changed to
	row_deleted here.  model_changed causes the table to free its
	ETableSelection, which is what we iterate over when deleting
	contacts.
	(e_contact_list_model_add_destination): no need to be calling
	model_changed here either.

2003-04-29  Chris Toshok  <toshok@ximian.com>

	[ fixes bug #41255 ]
	* gui/contact-list-editor/contact-list-editor.glade: use stock
	buttons for Add/Remove.

2003-04-29  Chris Toshok  <toshok@ximian.com>

	[ fixes bug #41144 ]
	* gui/component/ldap-config.glade: use stock buttons for the
	Add/Delete buttons.  Switch from "Delete" to "Remove", though, as
	"Remove" fits much better with the one for "Add".  Also, add our
	stock-edit-24.png icon for "Edit".
	
2003-04-29  Chris Toshok  <toshok@ximian.com>

	[ fixes bug #41211 ]
	* gui/component/e-address-popup.c (e_address_popup_no_matches):
	call e_button_new_with_stock_icon to create our button and give it
	the right icon.

2003-04-29  Gilbert Fang  <gilbert.fang@sun.com>

	* tools/evolution-addressbook-export-list-cards.c
	(set_pre_defined_field): remove duplicate HOME_COUNTRY field add.

2003-04-28  Chris Toshok  <toshok@ximian.com>

	[ fixes bug #41843]
	* tools/evolution-addressbook-export-list-cards.c
	(e_card_simple_csv_get_name): use e_card_simple_get_ecard_field
	instead of e_card_simple_get_name, so the return value won't be
	localized.

2003-04-28  Chris Toshok  <toshok@ximian.com>

	[ fixes bug #41779 ]
	* gui/component/e-address-popup.c (mini_wizard_container_add): we
	don't need to call gtk_widget_destroy on the old child, since
	gtk_container_remove will unref it for us.

2003-04-23  Chris Toshok  <toshok@ximian.com>

	[ fixes bug #37351 ]
	* gui/widgets/e-addressbook-view.c (table_drag_data_get): the row
	the signal is called with is already the model row, not the view